[gd_scene load_steps=2 format=3 uid="uid://ueiromoqlyp8"]

[ext_resource type="Script" uid="uid://cmjf72jnsd2i6" path="res://src/test/test_recognizer.gd" id="1_qmgt0"]

[node name="TestRecognizer" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qmgt0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 171.0
offset_bottom = 189.0

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Starting..."
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 1.45519e-11)
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score:"
horizontal_alignment = 2

[node name="ScoreField" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0.0000"

[node name="PositionLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Position:"
horizontal_alignment = 2

[node name="PositionField" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.0000"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="StopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Stop"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
